Text wrap fix for Firefox/Safari

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -90,7 +90,7 @@ footer img {
 
 .viewbox pre {
     word-wrap: break-word;
-    text-wrap: wrap;
+    white-space: break-spaces;
 }
 
 .deletion-notice {
